--- a/index.html
+++ b/index.html
@@ -97,13 +97,13 @@
         </div>
 
         <!-- CERTIFICATES SECTION -->
-        <div id="certificates-section" class="certificates" style="display:none;">
+         <div id="certificates-section" class="certificates" style="display:none;">
             <h2>Certificates</h2>
-            <ul>
-                <li>ALX Backend Certificate</li>
-                <li>Fisheries & Natural Resources Certificate (WRTI)</li>
-                <li>Other Certifications...</li>
-            </ul>
+            <div class="certificate-gallery">
+                <img src="50-founder-academy-certificate-emmanuel-wesa.jpg" alt="Founder Academy Certificate">
+                <img src="89-professional-foundations-certificate-emmanuel-mwiti.jpg" alt="Professional Foundations Certificate">
+        <!-- Add more certificate images here -->
+            </div>
         </div>
 
     </div>
