added my resume

--- a/index.html
+++ b/index.html
@@ -100,8 +100,8 @@
          <div id="certificates-section" class="certificates" style="display:none;">
             <h2>Certificates</h2>
             <div class="certificate-gallery">
-                <img src="50-founder-academy-certificate-emmanuel-wesa.jpg" alt="Founder Academy Certificate">
-                <img src="89-professional-foundations-certificate-emmanuel-mwiti.jpg" alt="Professional Foundations Certificate">
+                <img src="50-founder-academy-certificate-emmanuel-wesa.png" alt="Founder Academy Certificate">
+                <img src="89-professional-foundations-certificate-emmanuel-mwiti.png" alt="Professional Foundations Certificate">
         <!-- Add more certificate images here -->
             </div>
         </div>
