--- a/index.html
+++ b/index.html
@@ -97,16 +97,16 @@
         </div>
 
         <!-- CERTIFICATES SECTION -->
-         <div id="certificates-section" class="certificates" style="display:none;">
+        <div id="certificates-section" class="certificates">
             <h2>Certificates</h2>
             <div class="certificate-gallery">
                 <img src="50-founder-academy-certificate-emmanuel-wesa.png" alt="Founder Academy Certificate">
                 <img src="89-professional-foundations-certificate-emmanuel-mwiti.png" alt="Professional Foundations Certificate">
-        <!-- Add more certificate images here -->
             </div>
         </div>
 
     </div>
+
     <script src="script.js"></script>
 </body>
 </html>
