--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
         </div>
 
         <!-- CERTIFICATES SECTION -->
-        <div id="certificates-section" class="certificates">
+        <div id="certificates-section" class="certificates show">
             <h2>Certificates</h2>
             <div class="certificate-gallery">
                 <img src="50-founder-academy-certificate-emmanuel-wesa.png" alt="Founder Academy Certificate">
