--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                     <div class="social-links">
                         <a href="https://github.com/MwitiWesa-coke" target="_blank"><i class="fab fa-github"></i></a>
                         <a href="https://linkedin.com/in/emmanuelwesa" target="_blank"><i class="fab fa-linkedin"></i></a>
-                        <a href="https://x.com/wesa_smith" target="_blank"><i class="fab fa-twitter"></i></a>
+                        <a href="https://x.com/wesa_smith" target="_blank"><i class="fab fa-x-twitter"></i></a>
                         <a href="https://instagram.com/its_co.ke" target="_blank"><i class="fab fa-instagram"></i></a>
                     </div>
                 </div>
